--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,13 @@
-aiohappyeyeballs==2.4.4
-aiohttp==3.11.11
-aiosignal==1.3.2
-alembic==1.11.1
-anyio==4.8.0
-attrs==24.3.0
-bcrypt==4.0.1
-certifi==2024.12.14
-cffi==1.17.1
-charset-normalizer==3.4.1
-click==8.1.8
-cryptography==44.0.0
-distro==1.9.0
-dnspython==2.7.0
-ecdsa==0.19.0
-email-validator==2.0.0
-fastapi==0.99.1
-frozenlist==1.5.0
-greenlet==3.1.1
-h11==0.14.0
-httpcore==1.0.7
-httpx==0.28.1
-idna==3.10
-jiter==0.8.2
-Mako==1.3.8
-MarkupSafe==3.0.2
-multidict==6.1.0
-openai==1.59.3
-passlib==1.7.4
-propcache==0.2.1
-psycopg2-binary==2.9.6
-pyasn1==0.6.1
-pycparser==2.22
-pydantic==1.10.11
-python-dotenv==1.0.0
+fastapi==0.109.2
+uvicorn==0.27.1
+sqlalchemy==2.0.27
+pydantic==2.6.1
+pydantic-settings==2.1.0
 python-jose==3.3.0
-python-multipart==0.0.6
-requests==2.32.3
-rsa==4.9
-six==1.17.0
-sniffio==1.3.1
-SQLAlchemy==1.4.41
-starlette==0.27.0
-tqdm==4.67.1
-typing_extensions==4.12.2
-urllib3==2.3.0
-uvicorn==0.22.0
-yarl==1.18.3
+passlib==1.7.4
+python-multipart==0.0.9
+aiohttp==3.9.3
+python-dotenv==1.0.1
+email-validator==2.1.0.post1
+bcrypt==4.1.2
+certifi==2024.2.2
