Fix backend Vercel configuration and add app requirements

--- a/backend.vercel.json
+++ b/backend.vercel.json
@@ -9,7 +9,10 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "app/main.py"
+            "dest": "/app/main.py"
         }
-    ]
+    ],
+    "env": {
+        "PYTHONPATH": "."
+    }
 } 
