Rename and update Vercel configuration file

--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,18 @@
 {
     "version": 2,
-    "buildCommand": "cd frontend && npm install && npm run build",
-    "outputDirectory": "frontend/.next",
     "builds": [
         {
-            "src": "app/main.py",
+            "src": "./app/main.py",
             "use": "@vercel/python"
         }
     ],
     "routes": [
         {
-            "src": "/api/(.*)",
-            "dest": "app/main.py"
-        },
-        {
-            "handle": "filesystem"
-        },
-        {
             "src": "/(.*)",
-            "dest": "/frontend/$1"
+            "dest": "./app/main.py"
         }
-    ]
+    ],
+    "env": {
+        "PYTHONPATH": "."
+    }
 } 
