--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,1 +1,12 @@
-{"version":2,"buildCommand":"npm install && npm run build","outputDirectory":".next","rewrites":[{"source":"/api/:path*","destination":"NEXT_PUBLIC_API_URL/api/:path*"}]}
+{
+  "version": 2,
+  "framework": "nextjs",
+  "buildCommand": "npm install && npm run build",
+  "outputDirectory": ".next",
+  "rewrites": [
+    {
+      "source": "/api/:path*",
+      "destination": "NEXT_PUBLIC_API_URL/api/:path*"
+    }
+  ]
+}
